2010-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Wait until message arrives(again)
	* test/LpdMessageReceiverTest.cc

2010-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added missing wallclock.h to SRCS.
	* src/Makefile.am

2010-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error with --disable-bittorrent
	* test/Metalink2RequestGroupTest.cc
	* test/MetalinkParserControllerTest.cc

2010-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --reuse-uri option. This option has existed quite long, but
	been hidden.
	* doc/aria2c.1.txt
	* src/OptionHandlerFactory.cc
	* src/usage_text.h

2010-03-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Ignore filename parameter if it contains directory traversal
	directives.
	* src/util.cc
	* test/UtilTest.cc

2010-03-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	urldecode -> percentDecode
	* src/FtpConnection.cc
	* src/FtpNegotiationCommand.cc
	* src/HttpResponse.cc
	* src/Request.cc
	* src/magnet.cc
	* src/util.cc
	* src/util.h
	* test/UtilTest.cc

2010-03-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	urlencode -> percentEncode,
	torrentUrlencode -> torrentPercentEncode
	* src/BtHandshakeMessage.cc
	* src/BtHandshakeMessageValidator.h
	* src/DHTMessageFactoryImpl.cc
	* src/DefaultBtAnnounce.cc
	* src/HandshakeExtensionMessage.cc
	* src/HttpRequest.cc
	* src/XmlRpcMethodImpl.cc
	* src/bittorrent_helper.cc
	* src/util.cc
	* src/util.h
	* test/DHTAnnouncePeerMessageTest.cc
	* test/DHTGetPeersMessageTest.cc
	* test/DHTGetPeersReplyMessageTest.cc
	* test/UTPexExtensionMessageTest.cc
	* test/UtilTest.cc

2010-03-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that filename is percent encoded where it must be
	percent decoded in sendMdtm().
	* src/FtpConnection.cc
	* test/FtpConnectionTest.cc

2010-03-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
